# stock-agent

./: .env.example  .gitignore  README.md  TECHNICAL_GUIDE.md  app.py  config.py  pyproject.toml  주식_에이전트_앱_개발_가이드라인.md
agent/: budget_analyst.py  debate.py  fundamental_analyst.py  llm_client.py  market_analyst.py  news_analyzer.py  report_generator.py  views_generator.py
analysis/: backtest.py  dividend.py  monte_carlo.py  screener.py  technical.py
broker/: aggregator.py  csv_parser.py  manual_isa.py
budget/: analyzer.py  csv_parser.py  manager.py  models.py  recurring.py
data/: economic_data.py  fetcher.py  market_data.py  news_fetcher.py
db/: database.py  models.py
portfolio/: allocator.py  dca_advisor.py  isa_manager.py  manager.py  optimizer.py  rebalancer.py  tracker.py  watchlist.py
utils/: constants.py  fx.py  helpers.py  logger.py
